поправил стили на /client (client/index)

--- a/resources/sass/client.scss
+++ b/resources/sass/client.scss
@@ -1,9 +1,17 @@
 
 .client{
-    background-color: #3D3D3D;
+    background-color: #242B33;
 }
 
 .client-content{
-    background-color: #9C9C67;
+    background-color: #242B33;
 }
 
+.title-3 {
+    font-family: 'Playfair Display', serif;
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 1.33;
+    color: #D4C17F;
+    margin-bottom: 50px;
+}
