--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,12 +12,13 @@
 @import "landing";
 @import 'footer';
 
-<<<<<<< Updated upstream
+
 @import 'login';
 @import 'register';
-=======
+
 @import "adaptiv_320";
->>>>>>> Stashed changes
+@import "adaptiv_768";
+
 
 @import 'login';
 @import 'client';
