--- a/resources/sass/adaptiv_320.css
+++ b/resources/sass/adaptiv_320.css
@@ -1,12 +1,11 @@
-@media (max-width:500px) {
+@media (max-width:320px) {
     .app-wrapper {
-        max-width: 100%;
-        width: 100%;
+        max-width: 320px;
+        width: 320px;
         margin: 0 auto;
     }
 
     .header {
-        background-image: url(http://127.0.0.1:5173/storage/app/public/images/Rectangle.png);
         max-width: 100%;
         width: 100%;
         background-position: 50% 50%;
