--- a/resources/sass/adaptiv_320.css
+++ b/resources/sass/adaptiv_320.css
@@ -1,12 +1,18 @@
 @media (max-width:320px) {
+    .app {
+        max-width: 320px;
+        width: 100%;
+        margin: 0 auto;
+    }
+
     .app-wrapper {
         max-width: 320px;
-        width: 320px;
+        width: 100%;
         margin: 0 auto;
     }
 
     .header {
-        max-width: 100%;
+        max-width: 320px;
         width: 100%;
         background-position: 50% 50%;
     }
@@ -35,6 +41,11 @@
         line-height: 14px;
     }
 
+    .bottom {
+        max-width: 320px;
+        width: 100%;
+    }
+
     .bottom-top {
         margin-top: -144px;
         margin-left: -12px;
@@ -50,7 +61,7 @@
     }
 
     .menu-flats {
-        max-width: 100%;
+        max-width: 320px;
         width: 100%;
         padding: 0 0 0 0;
         margin-top: -143px;
@@ -63,22 +74,25 @@
     }
 
     .flats-items {
+        max-width: 320px;
+        width: 100%;
         margin-top: -86px;
     }
 
     .flats-item {
         width: 535px;
         height: 320px;
-        margin: 0 0 30px;
+        margin: 0 0 -100px 10px;
     }
 
     .flats-photo {
-        width: 100%;
-        height: 216px;
+        width: 300px;
+        height: 185px;
     }
 
     .flats-text {
         font-size: 20px;
+        margin-top: -124px;
     }
 
     .watching-section {
@@ -151,7 +165,7 @@
     }
 
     .map-bottom {
-        max-width: 1100px;
+        max-width: 320px;
         width: 100%;
         box-sizing: border-box;
         padding: 0 2%;
@@ -194,8 +208,13 @@
         margin-left: 0;
     }
 
+    .footer {
+        max-width: 320px;
+        width: 100%;
+    }
+
     .footer-wrapper {
-        max-width: 100%;
+        max-width: 320px;
         width: 100%;
         display: block;
     }
@@ -214,6 +233,7 @@
         margin-top: 0;
         margin-left: 74px;
         padding-bottom: 20px;
+        margin-right: 80px;
     }
 
 
