--- a/resources/sass/adaptiv_768.css
+++ b/resources/sass/adaptiv_768.css
@@ -51,4 +51,44 @@
         width: 100%;
         margin: 0 auto;
     }
+
+    .footer-center {
+        margin-top: 42px;
+        margin-left: 33px;
+    }
+
+    .footer-wrapper {
+        max-width: 768px;
+        width: 100%;
+    }
+
+    .footer-left {
+        margin-top: 60px;
+        margin-left: 20px;
+    }
+
+    .footer-right {
+        margin-top: 42px;
+        margin-left: 7px;
+    }
+
+    .weather {
+        margin-top: 46px;
+        margin-right: 10px;
+    }
+
+    .second-line-two,
+    .second-line-tree,
+    .second-line-four {
+        width: 200px;
+    }
+
+    .about-title {
+        margin-left: 60px;
+    }
+
+    .about-text {
+        margin-left: 60px;
+        margin-right: 100px;
+    }
 }
