--- a/resources/sass/adaptiv_768.css
+++ b/resources/sass/adaptiv_768.css
@@ -31,14 +31,16 @@
     }
 
     .flats-item {
-        width: 535px;
-        height: 320px;
-        margin: -20px 0 30px 30px;
+        max-width: 700px;
+        width: 100%;
+        display: flex;
+        justify-content: center;
     }
 
     .flats-photo {
-        width: 700px;
-        height: 358px;
+        max-width: 300px;
+        width: 100%;
+        height: 250px;
         position: absolute;
     }
 
@@ -52,29 +54,28 @@
         margin: 0 auto;
     }
 
+
     .footer-center {
         margin-top: 42px;
-        margin-left: 33px;
     }
 
     .footer-wrapper {
         max-width: 768px;
         width: 100%;
+        box-sizing: border-box;
+        padding: 0 2%;
     }
 
     .footer-left {
         margin-top: 60px;
-        margin-left: 20px;
     }
 
     .footer-right {
         margin-top: 42px;
-        margin-left: 7px;
     }
 
     .weather {
         margin-top: 46px;
-        margin-right: 10px;
     }
 
     .second-line-two,
