--- a/resources/sass/landing.css
+++ b/resources/sass/landing.css
@@ -55,7 +55,6 @@
     color: #FFFFFF;
     position: relative;
     top: 248px;
-    left: 20px;
 }
 
 .watching-section {
@@ -140,7 +139,8 @@
 }
 
 .video-block {
-    width: 719px;
+    max-width: 400px;
+    width: 100%;
     height: 650px;
     background: url('/storage/app/public/images/video.png') center / cover no-repeat;
     margin: 0 auto;
@@ -320,4 +320,5 @@
 .review-block {
     display: flex;
 }
+
 
