добавил компонент watch секции не хотите ли

--- a/resources/sass/landing.css
+++ b/resources/sass/landing.css
@@ -100,16 +100,17 @@
 
 .section-input {
     font-family: 'Raleway', sans-serif;
-    height: 50px;
+    height: 40px;
     font-weight: 400;
     font-size: 14px;
     line-height: 1.9;
-    text-align: center;
-    background: rgba(255, 255, 255, 0.2);
+    /*text-align: center;*/
+    background: #D4C17F;
     border: none;
     border-radius: 10px;
     color: #BEBEBE;
-    outline: none;
+    /*outline: none;*/
+
 }
 
 .watching-section_form p {
@@ -128,8 +129,8 @@
     font-size: 16px;
     line-height: 1.6;
     color: #FFFFFF;
-    background: #D4C17F;
-    padding: 11px 0;
+    background: White;
+    padding: 6px 0;
     box-sizing: border-box;
     cursor: pointer;
 }
