добавил компонент about

--- a/resources/sass/login.scss
+++ b/resources/sass/login.scss
@@ -19,6 +19,7 @@
 
 .login-input {
     font-family: 'Raleway', sans-serif;
+    border-radius: 10px;
     height: 50px;
     font-weight: 400;
     font-size: 14px;
@@ -42,6 +43,7 @@
 }
 .login-btn {
     border: none;
+    border-radius: 10px;
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
     font-size: 16px;
