--- a/resources/sass/register.scss
+++ b/resources/sass/register.scss
@@ -42,6 +42,7 @@
 }
 .register-btn {
     border: none;
+    border-radius: 10px;
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
     font-size: 16px;
