--- a/resources/sass/about.css
+++ b/resources/sass/about.css
@@ -5,12 +5,12 @@
     font-size: 36px;
     line-height: 48px;
     color: #D4C17F;
-    margin-left: 460px;
+    margin-left: 237px;
 }
 
 .about-text {
     color: #cbd5e0;
-    margin-left: 462px;
-    margin-right: 439px;
+    margin-left: 163px;
+    margin-right: 0;
     margin-bottom: 100px;
 }
