--- a/resources/sass/landing.css
+++ b/resources/sass/landing.css
@@ -140,12 +140,12 @@
 }
 
 .video-block {
-    max-width: 400px;
+    max-width: 600px;
     width: 100%;
-    height: 650px;
-    background: url('/storage/app/public/images/video.png') center / cover no-repeat;
+    height: 330px;
+    /*background: url('/storage/app/public/images/video.png') center / cover no-repeat;*/
     margin: 0 auto;
-    border-radius: 10px;
+    /*border-radius: 10px;*/
 }
 
 .reviews {
