Добавила таблицу вывода предыдущих показаний

--- a/resources/sass/cabinet.scss
+++ b/resources/sass/cabinet.scss
@@ -9,3 +9,13 @@
 .end-cabinet {
     margin-bottom: 150px;
 }
+.ant-collapse>.ant-collapse-item >.ant-collapse-header {
+    color: #FFFFFF;
+}
+
+.ant-btn-primary {
+    background-color: #ffe58f;
+    color: #000000;
+}
+
+
