--- a/resources/sass/adaptiv_320.css
+++ b/resources/sass/adaptiv_320.css
@@ -96,8 +96,7 @@
     }
 
     .watching-section {
-        background: url(http://127.0.0.1:5173/storage/app/public/images/watching-bg.png) center/cover no-repeat;
-        padding: 50px 0;
+        padding: 10px 0;
         box-sizing: border-box;
     }
 
@@ -126,6 +125,7 @@
 
     .text {
         margin-bottom: 10px;
+        margin-left: -32px;
     }
 
     button.section-btn {
@@ -133,8 +133,8 @@
     }
 
     .video-block {
-        width: 100%;
-        height: 200px;
+        height: 180px;
+        max-width: 320px;
     }
 
     .review-block {
