--- a/resources/sass/landing.css
+++ b/resources/sass/landing.css
@@ -54,7 +54,8 @@
     line-height: 28px;
     color: #FFFFFF;
     position: relative;
-    top: 248px;
+    top: 220px;
+    left: 52px;
 }
 
 .watching-section {
