--- a/resources/sass/adaptiv_320.css
+++ b/resources/sass/adaptiv_320.css
@@ -211,7 +211,11 @@
     .about-text {
         margin-left: 30px;
         margin-right: 30px;
+    }
 
+    .text {
+        margin-bottom: 10px;
+        margin-left: 0;
     }
 
 
