--- a/resources/sass/adaptiv_768.css
+++ b/resources/sass/adaptiv_768.css
@@ -87,4 +87,9 @@
         margin-left: 60px;
         margin-right: 100px;
     }
+
+    #rates {
+        width: 765px;
+        margin-left: 0;
+    }
 }
