--- a/resources/sass/header.css
+++ b/resources/sass/header.css
@@ -33,6 +33,12 @@ li {
     background-position: 50% 50%;
 }
 
+.header-two {
+    max-width: 1920px;
+    width: 100%;
+    background-position: 50% 50%;
+}
+
 .top {
     display: flex;
     max-width: 1500px;
@@ -89,8 +95,9 @@ li {
 .bottom {
     max-width: 582px;
     width: 100%;
-    height: 470px;
-    margin: 200px auto 0;
+    height: 641px;
+    margin: 30px auto 0;
+    padding-top: 159px;
 }
 
 .bottom-top {
