изменил class header-two на тег nav

--- a/resources/sass/header.css
+++ b/resources/sass/header.css
@@ -33,7 +33,7 @@ li {
     background-position: 50% 50%;
 }
 
-.header-two {
+nav {
     max-width: 1920px;
     width: 100%;
     background-position: 50% 50%;
