--- a/resources/sass/adaptiv_768.css
+++ b/resources/sass/adaptiv_768.css
@@ -92,4 +92,13 @@
         width: 765px;
         margin-left: 0;
     }
+
+    #navbar {
+    margin: -30px 0 0 -402px;
+    }
+
+    .top-right-two {
+        margin: -22px 0 0 -100px;
+        display: block;
+    }
 }
