--- a/resources/sass/landing.css
+++ b/resources/sass/landing.css
@@ -136,21 +136,12 @@
     cursor: pointer;
 }
 
-/*#video {*/
-/*    width: 500px;*/
-/*}*/
-
-.video-section {
-    background: #242B33;
-}
-
 .video-block {
-    max-width: 270px;
+    max-width: 1100px;
     width: 100%;
-    height: 330px;
-    /*background: url('/storage/app/public/images/video.png') center / cover no-repeat;*/
-    margin: 0 auto;
-    /*border-radius: 10px;*/
+    box-sizing: border-box;
+    padding: 0 2%;
+    margin: -85px 0 0 550px;
 }
 
 .reviews {
