--- a/resources/sass/landing.css
+++ b/resources/sass/landing.css
@@ -114,17 +114,16 @@
     background-color: #242B33;
     max-width: 1100px;
     width: 100%;
-    margin: 0 auto 180px;
+    margin: 0 auto;
 }
 
 .map {
-    font-family: 'Playfair Display', sans-serif;
-    font-style: normal;
+    font-family: 'Playfair Display', serif;
     font-weight: 700;
     font-size: 36px;
-    line-height: 48px;
+    line-height: 1.33;
     color: #D4C17F;
-    padding-top: 40px;
+    margin-left: 67px;
 }
 
 .map-bottom {
@@ -132,7 +131,7 @@
     width: 100%;
     box-sizing: border-box;
     padding: 0 2%;
-    margin: 100px 0 0 0;
+    margin: 40px 0 0 0;
 
 }
 
